--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,33 @@
-data
+# dataset
+data/scanrefer*
+data/ScanRefer*
+data/glove*
+data/scannet_train_images
+data/enet_features
+data/scannet/scannet_data
+data/scannet/scans
+data/scannet/scannetv2-labels.combined.tsv
+data/scannet/tasks
+data/scannetv2_enet.pth
+
+# cache
+data/scannet/__pycache__
+lib/__pycache__
+lib/pointnet2/__pycache__
+models/__pycache__
+utils/__pycache__
+
+# pointnet2
+lib/pointnet2/build/
+lib/pointnet2/dist/
+lib/pointnet2/pointnet2.egg-info/
+
+# others
+lib/config.py
 outputs
 demo
 docs
 LICENSE
 *pyc
 .vscode
-
+.idea
