--- a/.gitignore
+++ b/.gitignore
@@ -28,8 +28,7 @@ lib/config.py
 !outputs
 outputs/*
 !outputs/GFDetector
-!outputs/SR_VN_XYZ
-!outputs/SR_VN_XYZ_MULTIVIEW_NORMAL_LANGCLS
+!outputs/ScanRefer
 eval_dump
 demo
 docs
